# bubblegum-batch-sdk

./: .gitignore  Cargo.toml  README.md  build.rs  it.md  rustfmt.toml
src/: batch_mint_builder.rs  batch_mint_client.rs  batch_mint_validations.rs  errors.rs  lib.rs  merkle_tree_wrapper.rs  model.rs  pubkey_util.rs  rollup_builder.rs  rollup_client.rs  tree_data_acc.rs
test_data/accounts/: registrar.json  voter.json
tests/: batch_mint_validation_test.rs  flow_test.rs  staking_helper.rs
tests/utils/: context.rs  mod.rs  my_test_context.rs  test_validator_runner.rs
