[package]
name = "bubblegum-batch-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
paste = "1"
thiserror = "^1.0.63"

uuid = { version = "1.6" }
sha2 = "0.10"
chrono = "^0.4"
bytemuck = "1.13"
borsh = ">= 0.9, < 1.0"

serde = {version = "1"}
serde_derive = "1"
serde_json = { version = "1", features = ["raw_value"] }
serde_with = "3.7"
anchor-lang = "0.29.0"

solana-sdk = "~1.18.11"
solana-program = "~1.18.11"
solana-client = "~1.18.11"
solana-rpc-client-api = "~1.18.11"

bubblegum = { git = "https://github.com/adm-metaex/mpl-bubblegum.git", branch = "feature/cleanup", features = ["no-entrypoint"] }
mpl-bubblegum = { git = "https://github.com/adm-metaex/mpl-bubblegum.git", branch = "feature/cleanup", features = ["serde"] }
spl-account-compression = { git = "https://github.com/StanChe/solana-program-library.git", branch = "feature/init_with_root", features = ["no-entrypoint"] }
spl-concurrent-merkle-tree = { git = "https://github.com/StanChe/solana-program-library.git", branch = "feature/init_with_root", default-features = false }
spl-merkle-tree-reference = { git = "https://github.com/StanChe/solana-program-library.git", branch = "feature/init_with_root" }
spl-noop = { git = "https://github.com/StanChe/solana-program-library.git", branch = "feature/init_with_root" }
mplx-staking-states = { git = "https://github.com/adm-metaex/mplx-staking.git" }

blockbuster = { git = "https://github.com/adm-metaex/blockbuster", branch = "remove-bubblegum-submodule" }

[dev-dependencies]
tokio = "1"
base64 = "0.22"
serial_test = "3"
